--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -99,7 +99,8 @@ jobs:
       matrix:
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
         #os: ["windows-2022", "windows-11-arm"]
-        os: ["windows-11-arm"]
+        #os: ["windows-11-arm"]
+        os: ["windows-2022"]
         python-version: ["3.9"]
     steps:
       - uses: actions/checkout@v4
