--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -8,19 +8,15 @@ on:
   pull_request:
     branches: ["**"]
 
-vars:
+env:
   DISABLE_NATIVE_BINARY_TESTS: 1
-  BUILD_LINUX: 0
-  BUILD_WINDOWS: 0
-  BUILD_MACOS_X86: 1
-  BUILD_MACOS_ARM: 1
 
 jobs:
   linux:
     name: Build and test wheels for Linux 
     permissions:
       contents: read
-    if: ${{ vars.BUILD_LINUX == '1' }}
+    if: false
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -49,7 +45,7 @@ jobs:
 
       # Build and run native tests only for Python 3.8
       - name: Build and run native C++ tests
-        if: matrix.python-version == '3.8' && vars.DISABLE_NATIVE_BINARY_TESTS != '1'
+        if: matrix.python-version == '3.8' && env.DISABLE_NATIVE_BINARY_TESTS != '1'
         run: |
           cd similarity_search
           # No extras at least for now
@@ -77,7 +73,7 @@ jobs:
 
   macos-arm64:
     name: macOS ARM64 (M-series)
-    if: ${{ vars.BUILD_MACOS_ARM == '1' }}
+    if: true
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
@@ -91,7 +87,7 @@ jobs:
           python3 -c "import platform; print('machine:', platform.machine())"
 
       - name: Build & run native C++ tests (arm64)
-        if: vars.DISABLE_NATIVE_BINARY_TESTS != '1'
+        if: env.DISABLE_NATIVE_BINARY_TESTS != '1'
         run: |
           cd similarity_search
           cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=${MACOSX_DEPLOYMENT_TARGET} .
@@ -120,7 +116,7 @@ jobs:
 
   macos-x86_64:
     name: macOS Intel
-    if: ${{ vars.BUILD_MACOS_X86 == '1' }}
+    if: true
     runs-on: macos-15-intel
     steps:
       - uses: actions/checkout@v4
@@ -135,7 +131,7 @@ jobs:
           python3 -c "import platform; print('machine:', platform.machine())"
 
       - name: Build & run native C++ tests (x86_64)
-        if: vars.DISABLE_NATIVE_BINARY_TESTS != '1'
+        if: env.DISABLE_NATIVE_BINARY_TESTS != '1'
         run: |
           cd similarity_search
           cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=${MACOSX_DEPLOYMENT_TARGET} .
@@ -165,7 +161,7 @@ jobs:
     name: Build and test wheels for Windows
     permissions:
       contents: read
-    if: ${{ vars.BUILD_WINDOWS == '1' }}
+    if: false
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -189,7 +185,7 @@ jobs:
 
       # Build and run native tests only for Python 3.8
       - name: Build and run native C++ tests
-        if: matrix.python-version == '3.8' && vars.DISABLE_NATIVE_BINARY_TESTS != '1'
+        if: matrix.python-version == '3.8' && env.DISABLE_NATIVE_BINARY_TESTS != '1'
         shell: cmd
         run: |
           echo Locating Visual Studio...
