--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -167,8 +167,8 @@ jobs:
     strategy:
       matrix:
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
-        os: ["windows-11-arm", "windows-2022"]
-        #os: ["windows-11-arm"]
+        #os: ["windows-11-arm", "windows-2022"]
+        os: ["windows-11-arm"]
         #os: ["windows-2022"]
         python-version: ["3.11"]
     steps:
@@ -186,7 +186,16 @@ jobs:
         run: |
           Write-Host "Runner architecture: $env:RUNNER_ARCH"
           if ($env:RUNNER_ARCH -eq "ARM64") {
-              # Note we are adding zero to the path or else it will fail
+              # Note we are adding a patch number to the path or else it will fail
+              # We can't use 3.11.0 though because it was immature and didn't properly register Python
+              # Construct full version with patch suffix
+              if ("${{ matrix.python-version }}" -eq "3.11") {
+                  # Python 3.11.14 is the last patch and fixes ARM registry bugs
+                  $pyver = "3.11.14"
+              } else {
+                  # For all other versions, default to .0 (e.g., 3.12.0, 3.13.0, etc.)
+                  $pyver = "${{ matrix.python-version }}.0"
+              }
               $pyver = "${{ matrix.python-version }}.0"
               $url = "https://www.python.org/ftp/python/$pyver/python-$pyver-arm64.exe"
               Write-Host "Downloading ARM64 Python from $url"
