--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -167,8 +167,8 @@ jobs:
     strategy:
       matrix:
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
-        #os: ["windows-11-arm", "windows-2022"]
-        os: ["windows-11-arm"]
+        os: ["windows-11-arm", "windows-2022"]
+        #os: ["windows-11-arm"]
         #os: ["windows-2022"]
         python-version: ["3.11"]
     steps:
@@ -298,12 +298,12 @@ jobs:
               Write-Host "Detected Intel Windows runner."
               $env:ARCH = "SSE2"
           }
-          & "$env:PYTHON_ROOT\python.exe" -c "import os; print('ARCH:', os.environ.get('ARCH'))"
+          & (Join-Path $env:PYTHON_ROOT "python.exe") -c "import os; print('ARCH:', os.environ.get('ARCH'))"
           Set-Location python_bindings
-          & "$env:PYTHON_ROOT\python.exe" -m uv build --wheel
+          & (Join-Path $env:PYTHON_ROOT "python.exe") -m uv build --wheel
           $pyver = "${{ matrix.python-version }}" -replace '\.', ''
           Get-ChildItem dist\*.whl | ForEach-Object {
-              & "$env:PYTHON_ROOT\python.exe" -m tox -e "py$pyver" --installpkg $_
+              & (Join-Path $env:PYTHON_ROOT "python.exe")-m tox -e "py$pyver" --installpkg $_
           }
         continue-on-error: false
 
